testsuite/tests/typecheck/should_fail/T19415.stderr
T19415.hs:27:8: error: [GHC-39999]
    • No instance for ‘SetField "name" (Pet a0) (Pet b0) Char’
        arising from a use of ‘setField’
    • In the expression: setField @"name" 'c' (Pet "hi")
      In an equation for ‘loop’: loop = setField @"name" 'c' (Pet "hi")

